--- a/programan-community-web/src/main/resources/static/css/index.css
+++ b/programan-community-web/src/main/resources/static/css/index.css
@@ -107,7 +107,7 @@ dt {
 }
 
 .article-box a {
-	color: #000000;
+	color: rgb(51,51,51);
 }
 
 .article-box a:hover {
@@ -143,3 +143,257 @@ dt {
 	float: right;
 }
 
+.right_content {
+	float: left;
+	margin-left: 20px;
+	max-width: 400px;
+}
+
+.container {
+	padding: 0;
+}
+
+.right-box {
+	width: 100%;
+	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
+	padding: 10px;
+	margin-top: 5px;
+}
+
+.right-box h2 {
+	color: rgb(202, 8, 20);
+	border-left: #1E9FFF solid 6px;
+	padding-left: 30px;
+	margin: 15px 0 8px 0;
+}
+
+.right-box ul {
+	margin-top: 20px;
+}
+
+.right-box li {
+	height: 55px;
+	margin: 6px 10px;
+}
+
+.right-box a {
+	height: 100%;
+	display: inline-block;
+	overflow: hidden;
+	font-size: 1.3em;
+	font-weight: 500;
+	color: rgb(51,51,51);
+}
+
+.right-box a:hover{
+	color: rgb(205, 42, 55);
+}
+
+.right-box img {
+	width: 90%;
+	height: auto;
+	display: block;
+	margin: 0 auto;
+}
+
+.right-box li img {
+	width: 80px;
+	height: 55px;
+	border-radius: 10px;
+}
+
+.right-box-img {
+	width: 80px;
+	height: 55px;
+	border-radius: 10px;
+}
+
+.right-box-word{
+	width: 250px;
+	padding: 0 10px;
+	line-height: 1.7em;
+}
+
+.download-header .dropdown a {
+	display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
+
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+  color: #262626;
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+
+.dropdown {
+	float: left;
+}
+
+.form-horizontal input{
+	width: 200px;
+	float: left;
+	margin-left: 10px;
+	font-size: 1.2em;
+}
+
+#downloadForm .btn-info {
+	width: 100px;
+	border-radius: 20px;
+	font-size: 1.2em;
+} 
+
+.download-header {
+	width: 520px;
+    height: 50px;
+    margin: 30px auto 0 auto;
+}
+
+.download-body {
+	width: 90%;
+	margin: 0 auto;
+	padding: 15px;
+	margin-top: 20px;
+}
+
+.download-body dl {
+	width: 100%;
+	height: 80px;
+	padding: 10px;
+	border-bottom: dashed 1px #e6e6e6;
+}
+
+.download-body dl img {
+	height: 60px;
+	width: auto;
+}
+
+.download-body dd {
+	width: 870px;
+	margin-left: 15px;
+}
+
+.download-body dd a {
+	display: block;
+	margin-top: 5px;
+	color: rgb(46,46,46);
+	font-size: 1.3em;
+	font-weight: 500;
+}
+
+.download-body dd a:hover{
+	color: rgb(229,45,50);
+}
+
+.download-body em {
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 500;
+}
+
+.download-p {
+	font-size: 25px!important;
+	color: rgb(253,205,80);
+}
+
+.download-msg {
+	margin-top: 15px;
+}
+
+.course-list {
+	width: 100%;
+	padding: 0 20px 20px 20px;
+	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
+}
+
+.course-list h3 {
+	text-align: center;
+	border-bottom: solid 1px rgba(0,0,0,0.1);
+	line-height: 65px;
+}
+
+.course-list a {
+	width: 10%;
+	height: 40px;
+    line-height: 40px;
+    color: rgb(200,200,200);
+	display: inline-block;
+	text-align: center;
+	font-size: 1.3em;
+}
+
+.course-list a:hover {
+	color: rgb(188,9,18);
+}
+
+.course-box {
+	width: 250px;
+	height: 340px;
+	float: left;
+    margin-left: 2%;
+    margin-top: 2%;
+	box-shadow: 0 0 4px rgba(0,0,0,.2);
+}
+
+.course-box:hover {
+	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
+}
+
+.course-img {
+	width: 250px;
+    height: 158px;
+    overflow: hidden;
+}
+
+.course-img img {
+	width: 250px;
+    height: 158px;
+}
+
+.course-info {
+	padding: 15px;
+}
+
+.course-info a {
+	display: block;
+    line-height: 30px;
+    font-size: 1.4em;
+    text-align: center;
+}
+
+.course-info p {
+	text-align: center;
+}
+
+.skill {
+	text-align: center;
+}
+
+.skill-tag {
+	border-left: 1px solid #9b9b9b;
+    padding: 0 5px;
+    font-size: 14px;
+    color: #9b9b9b;
+    display: inline-block;
+    height: 14px;
+    line-height: 14px;
+}
+
+.skill-tag:first-child {
+    border-left: none;
+    padding-left: 0;
+}
+
+.course-footer {
+	width: 100%;
+	border-top: solid 1px rgba(50,50,50,0.1);
+}
+
+.course-footer h3 {
+	text-align: center;
+}
