--- a/programan-community-web/src/main/resources/static/css/style.css
+++ b/programan-community-web/src/main/resources/static/css/style.css
@@ -226,7 +226,7 @@ aside {
 
 .main_content {
 	float: left;
-	margin-left: 200px;
+	margin-left: 190px;
 	max-width: 700px;
 }
 
@@ -237,4 +237,185 @@ footer {
 	background-color: #999;
 	height: 300px;
 	width: 100%;
+}
+
+.slider {
+	width: 100%;
+    overflow: hidden;
+    height: 250px;
+    position: relative;
+}
+
+.sliderList {
+	position: absolute;
+	top: 0;
+	width: 300%;
+	height: 100%;
+	list-style: none;
+}
+
+.sliderList li {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	overflow: hidden;
+	width: 33.333333%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
+
+.sliderList li img {
+	width: 100%;
+	min-height: 100%;
+	border: none;
+}
+
+.bulletList {
+	position: absolute;
+	bottom: 15px;
+	width: 100%;
+	margin: 0 auto;
+	list-style: none;
+	text-align: center;
+}
+
+.bulletList li{
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	margin: 0 5px;
+	-webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+	background-color: #fff;
+	cursor: pointer;
+}
+
+.bulletList .bulletActive {
+	background-color: #0b0d18;
+}
+
+.content {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.3);
+	font-size: 20px;
+	color: #fff;
+}
+
+.button {
+	position: absolute;
+	bottom: 15px;
+	z-index: 2;
+	display: block;
+	width: 20px;
+	height: 20px;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	border: none;
+	-webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border-radius: 5px;
+	background-color: rgba(5, 0, 36, 0.6);
+	color: #fff;
+}
+
+.button-prev {
+	left: 15px;
+}
+
+.button-next {
+	right: 15px;
+}
+
+/* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
+/* =========
+Get Fonts */
+@import url(http://fonts.googleapis.com/css?family=Quicksand);
+@import url(http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+/* ================
+   Assign Variables */
+/* ===========================
+   Setup Mixins/Helper Classes */
+.clearfix:after, .container:after, .tab-nav:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+/* ==========
+   Setup Page */
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Quicksand', sans-serif;
+}
+
+/* ===========
+   Tab Styling */
+.tab-group {
+  position: relative;
+  border: 1px solid #eee;
+  margin-top: 2.5em;
+  border-radius: 0 0 10px 10px;
+}
+.tab-group section {
+  opacity: 0;
+  height: 0;
+  padding: 0 1em;
+  overflow: hidden;
+  transition: opacity 0.4s ease, height 0.4s ease;
+}
+.tab-group section.active {
+  opacity: 1;
+  padding: 1em 1em;
+  height: auto;
+  overflow: visible;
+}
+
+.tab-nav {
+  list-style: none;
+  margin: -2.5em -1px 0 0;
+  padding: 0;
+  height: 2.5em;
+  overflow: hidden;
+}
+.tab-nav li {
+  display: inline;
+}
+.tab-nav li a {
+  top: 1px;
+  position: relative;
+  display: block;
+  float: left;
+  border-radius: 10px 10px 0 0;
+  background: #eee;
+  line-height: 2em;
+  padding: 0 1em;
+  text-decoration: none;
+  color: grey;
+  margin-top: .5em;
+  margin-right: 1px;
+  transition: background .2s ease, line-height .2s ease, margin .2s ease;
+}
+.tab-nav li.active a {
+  background: #6EB590;
+  color: white;
+  line-height: 2.5em;
+  margin-top: 0;
+}
+
+#main {
+	width: 100%;
+	margin: 0 auto;
 }
