[programan] 用户 | 行业后台管理

--- a/programan-community-web/src/main/resources/static/assets/css/dataTables.bootstrap.css
+++ b/programan-community-web/src/main/resources/static/assets/css/dataTables.bootstrap.css
@@ -45,7 +45,7 @@ div.dataTables_filter label {
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0px;
+    right: 0px;
     width: 30px;
     max-width: 30px;
     overflow: hidden;
