--- a/programan-community-web/src/main/resources/static/css/index.css
+++ b/programan-community-web/src/main/resources/static/css/index.css
@@ -32,6 +32,10 @@ dt {
 	margin-right: 4px;
 }
 
+.navbar {
+	z-index: 99999;
+}
+
 .page-content {
 	min-width: 1396px;
 }
@@ -720,7 +724,7 @@ dt {
 }
 
 .article-single-data .operation{
-	width: 90px;
+	width: 130px;
 	float: right;
 }
 
@@ -734,12 +738,15 @@ dt {
 .article-left {
 	width: 25%;
 	float: left;
+	background-color: #FFFFFF;
 }
 
 .article-right {
-	width: 70%;
-	margin-left: 3px;
-	float: left;
+	width: 72%;
+    margin-left: 20px;
+    float: left;
+    padding: 20px;
+    background-color: #FFFFFF;
 }
 
 .auth-info {
@@ -750,7 +757,7 @@ dt {
 }
 
 .article {
-	padding: 30px 90px;
+	padding: 30px 60px;
 }
 
 .auth-info-top, .auth-info-middle, .auth-info-bottom{
@@ -773,7 +780,7 @@ dt {
 
 .auth-info-top span {
 	display: inline-block;
-	margin: 0 10px;
+	margin: 0 8px;
 	height: 50px;
 	vertical-align: middle;
 	line-height: 50px;
@@ -803,13 +810,13 @@ dt {
 
 .auth-info-middle dl {
 	display: inline-block;
-	width: 50px;
+	width: 70px;
 	height: 50px;
 	text-align: center;
 }
 
 .auth-info-middle dd, .auth-info-middle dt {
-	width: 100%;
+	width: 50px;
 	line-height: 25px;
 	margin: 0 10px;
     font-size: 1.2em;
@@ -1056,6 +1063,76 @@ dt {
 	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
 }
 
-.manager-data-body .action{
-	
+.head-img{
+	width: 200px;
+	height: 200px;
+	border: 1px solid rgba(0,0,0,0.2);
+	margin: 20px auto;
+}
+
+.head-img img{
+	width: 100%;
+	height: 100%;
+}
+
+.widget-body{
+	position: relative;
+}
+
+.table-toolbar{
+	width: 200px;
+    padding: 0;
+    display: inline-block;
+    position: absolute;
+}
+
+.article-body {
+	padding: 20px;
+	border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.layui-layer-btn1 {
+	color: #333!important;
+}
+
+.form-horizontal select{
+	width: 200px;
+	margin-left: 10px;
+}
+
+.form-group #editor {
+	margin: 0 50px;
+}
+
+.table-toolbar {
+	z-index: 2;
+}
+
+.sidebar-menu a {
+	position: relative;
+}
+
+.sidebar-menu a span {
+	position: absolute;
+	left: 32px;
+}
+
+.article-comment {
+	padding: 20px;
+	background-color: #FFFFFF;
+}
+
+.article-comment-text {
+	width: 100%;
+	height: 70px;
+	border-radius: 5px;
+}
+
+.article-comment .submit-input {
+	width: 90px;
+    height: 35px;
+}
+
+.article-comment .submit-input :hover{
+	background-color: rgba(55,203,223,0.7);
 }
