--- a/programan-community-web/src/main/resources/static/css/bootstrap-touch-slider.css
+++ b/programan-community-web/src/main/resources/static/css/bootstrap-touch-slider.css
@@ -133,8 +133,8 @@
 }
 .indicators-line > .carousel-indicators li{
     padding: 0;
-    width: 15px;
-    height: 15px;
+    width: 8px;
+    height: 8px;
     border: 1px solid rgb(158, 158, 158);
     text-indent: 0;
     overflow: hidden;
@@ -145,7 +145,7 @@
     -webkit-font-smoothing: antialiased;
     -webkit-border-radius: 50%;
     border-radius: 50%;
-    margin-right: 5px;
+    /*margin-right: 5px;*/
     -webkit-transition: all 0.5s cubic-bezier(0.22,0.81,0.01,0.99);
     transition: all 0.5s cubic-bezier(0.22,0.81,0.01,0.99);
     z-index: 10;
@@ -155,9 +155,10 @@
     margin-right: 0;
 }
 .indicators-line > .carousel-indicators .active{
-    margin: 1px 5px 1px 1px;
-    box-shadow: 0 0 0 2px #fff;
-    background-color: transparent;
+    /*margin: 1px 5px 1px 1px;*/
+    /*box-shadow: 0 0 0 2px #fff;*/
+    background: rgba(255, 255, 255, 1);
+    /*background-color: transparent;*/
     position: relative;
     -webkit-transition: box-shadow 0.3s ease;
     -moz-transition: box-shadow 0.3s ease;
