--- a/programan-community-web/src/main/resources/static/css/style.css
+++ b/programan-community-web/src/main/resources/static/css/style.css
@@ -270,8 +270,9 @@ footer {
 	width: 100%;
 	min-height: 100%;
 	border: none;
-	width: 400px;
-    height: 250px;
+	/*width: 400px;*/
+    /*height: 250px;*/
+   height: 100%;
 }
 
 .bulletList {
@@ -292,12 +293,13 @@ footer {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     border-radius: 50%;
-	background-color: #fff;
+	background-color: #0b0d18;
 	cursor: pointer;
+	opacity: 0.1;
 }
 
 .bulletList .bulletActive {
-	background-color: #0b0d18;
+	background-color: #fff;
 }
 
 .content {
@@ -306,7 +308,9 @@ footer {
 	left: 0;
 	right: 0;
 	background-color: rgba(0, 0, 0, 0.3);
-	font-size: 20px;
+	font-size: 15px;
+    line-height: 30px;
+    padding-left: 10px;
 	color: #fff;
 }
 
@@ -325,7 +329,7 @@ footer {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     border-radius: 5px;
-	background-color: rgba(5, 0, 36, 0.6);
+	background-color: rgba(5, 0, 36, 0.2);
 	color: #fff;
 }
 
@@ -433,4 +437,24 @@ body {
     background-color: #FFFFFF;
     opacity: 0.6;
     filter: alpha(opacity = 60);
+}
+
+.course-slider .content,.course-slider .bulletList {
+	display: none;
+}
+
+.course-slider .button {
+	bottom: 115px;
+	background-color: rgba(5, 0, 36, 0);
+	color: rgba(255,255,255,0.3);
+	font-size: 1.5em;
+}
+
+.course-slider .button:hover {
+	color: rgba(255,255,255,0.6);
+}
+
+.carousel-inner img {
+	width: 700px;
+	height: 310px;
 }
