--- a/programan-community-web/src/main/resources/static/css/style.css
+++ b/programan-community-web/src/main/resources/static/css/style.css
@@ -462,3 +462,8 @@ body {
 .menu-dropdown .menu-text {
 	left: 60px!important;
 }
+
+.widget{
+	background-color: rgba(255,255,255,0.2);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
