--- a/programan-community-web/src/main/resources/static/css/index.css
+++ b/programan-community-web/src/main/resources/static/css/index.css
@@ -606,11 +606,13 @@ dt {
 
 .edit-right {
 	width: 80%;
-	vertical-align: top;
-	border-left: 1px solid #e9e9e9;
-	display: inline-block;
-	padding: 10px;
-	min-height: 600px;
+    vertical-align: top;
+    border-left: 1px solid #e9e9e9;
+    display: inline-block;
+    padding: 10px;
+    min-height: 600px;
+    max-height: 800px;
+    overflow: scroll;
 }
 
 .edit-page {
@@ -624,6 +626,7 @@ dt {
 	box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.1);
 	background-color: #FFFFFF;
 	padding: 40px 0;
+	position: relative;
 }
 
 .edit-left a {
@@ -689,11 +692,13 @@ dt {
 }
 
 .article-finder {
-	width: 100%;
-	height: 60px;
-	padding: 13px 0;
-	background-color: rgb(242,245,247);
-	font-size: 1.0em!important;
+	width: 77%;
+    height: 60px;
+    position: absolute;
+    top: 40px;
+    padding: 13px 0;
+    background-color: rgb(242,245,247);
+    font-size: 1.0em!important;
 }
 
 .article-finder .form-control {
@@ -716,7 +721,7 @@ dt {
 }
 
 .article-list{
-	margin-top: 50px;
+	margin-top: 80px;
 }
 
 .article-single .title {
@@ -752,14 +757,18 @@ dt {
 }
 
 .article-left {
-	width: 25%;
-	float: left;
-	background-color: #FFFFFF;
+	width: 348px;
+    float: left;
+    background-color: #FFFFFF;
+    position: fixed;
+    top: 88px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+    padding: 10px;
 }
 
 .article-right {
 	width: 72%;
-    margin-left: 20px;
+    margin-left: 365px;
     float: left;
     padding: 20px;
     background-color: #FFFFFF;
@@ -768,8 +777,7 @@ dt {
 .auth-info {
 	width: 100%;
 	min-width: 300px;
-	height: 300px;
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+	/*height: 300px;*/
 }
 
 .article {
@@ -1291,4 +1299,56 @@ dt {
 
 .system-total p {
 	line-height: 40px;
+}
+
+.page-content-table {
+	min-width: 0px!important;
+	display: block;
+    /*margin-left: 224px;*/
+    margin-right: 0px;
+    margin-top: 0px;
+    min-height: 100%;
+    padding: 0px;
+}
+
+.user-info-follow-btn{
+	color: rgb(32,193,220);
+    width: auto!important;
+    padding: 0 5px;
+    height: 30px!important;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.4);
+    font-size: 1.1em!important;
+    background: #FFFFFF;
+    margin: 0;
+}
+
+.resent-article {
+	width: 100%;
+	padding: 10px;
+}
+
+.resent-article li {
+	width: 100%;
+	height: 80px;
+}
+
+.resent-article li a {
+	color: #666;
+    font-weight: 500;
+    font-size: 1.2em;
+    line-height: 25px;
+}
+
+.resent-article li a:hover {
+	color: rgba(246,40,27,0.7);
+}
+
+.resent-article li p {
+	font-weight: 100;
+}
+
+.auth-info h2 {
+	color: #666;
+    border-left: 5px solid rgba(246,40,27,1);
+    padding-left: 15px;
 }
