--- a/programan-community-web/src/main/resources/static/css/index.css
+++ b/programan-community-web/src/main/resources/static/css/index.css
@@ -1352,3 +1352,32 @@ dt {
     border-left: 5px solid rgba(246,40,27,1);
     padding-left: 15px;
 }
+
+.article-box-head h2 {
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+#articleBody img {
+	max-width: 100%;
+}
+
+.send-sms {
+	width: 100%;
+	height: 40px;
+	margin: 10px 0;
+}
+
+.send-sms .phone-input{
+	width: 70%;
+	margin: 0;
+	float: left;
+}
+
+.send-sms .sms-btn {
+	width: 30%;
+	height: 40px;
+	float: right;
+	margin: 0;
+}
