--- a/programan-community-web/src/main/resources/static/css/bootstrap-touch-slider.css
+++ b/programan-community-web/src/main/resources/static/css/bootstrap-touch-slider.css
@@ -208,11 +208,9 @@
     position: absolute;
     text-align: left;
     padding: 10px 85px;
-    
 }
 
 .slide-text > h1 {
-    
     padding: 0;
     color: #ffffff;
     font-size: 70px;
@@ -230,7 +228,7 @@
     font-size: 20px;
     line-height: 24px;
     font-weight: 300;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     letter-spacing: 1px;
     -webkit-animation-delay: 1.1s;
     animation-delay: 1.1s;
@@ -262,7 +260,7 @@
     line-height: 15px;
     margin-left: 10px;
     text-align: center;
-    padding: 17px 30px;
+    padding: 10px;
     white-space: nowrap;
     letter-spacing: 1px;
     background: #00bfff;
